Fixed the full-screen z-index hiding the select2 drop-down

--- a/PricingLogic_Form.css
+++ b/PricingLogic_Form.css
@@ -49,7 +49,7 @@ h3.pricesetlogic-section .crm-hover-button {
 #ValueEditor {
     overflow: hidden;
     overflow-y: auto;
-    z-index: 10000;
+    z-index: 9997;
 }
 
 .CVMax h3 {
@@ -62,6 +62,7 @@ h3.pricesetlogic-section .crm-hover-button {
     min-height: 100%;
     z-index: 1;
     box-sizing: border-box;
+    padding-bottom: 30px;
 }
 #ValueEditor #BottomButtons {
     bottom: 0px;
